--- a/app/static/css/global.css
+++ b/app/static/css/global.css
@@ -10,6 +10,8 @@ body{
     margin: 0;
 }
 
+/* #region LAYOUT */
+
 /*#region HEADER*/
 header{
     background-image: url('../img/header_img.jpg');
@@ -24,12 +26,12 @@ header{
 
 nav{
     position: relative;
-    width: 70%;
+    /* width: 70%; */
     height: 2.5rem;
     top: 13.5rem;
 
-    margin-left: auto;
-    margin-right: auto;
+    /* margin-left: auto;
+    margin-right: auto; */
 
     background: white;
 
@@ -50,7 +52,6 @@ nav>nav-item, nav>label{
     border-color: #BDC9D1;
     
     font-family: 'Ubuntu Condensed', sans-serif;
-    font-weight: 500;
     font-size: 1rem;
     text-transform: capitalize;
     
@@ -59,11 +60,16 @@ nav>nav-item, nav>label{
     
     color: #475156;
     cursor: pointer;
+
+    -webkit-user-select: none; /* Safari */        
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard */
 }
 
 nav>nav-item:hover, nav>nav-item.nav-active{
-    color: #0F69B4;
-    border-color: #BDC9D1 #BDC9D1 #0F69B4 #BDC9D1;
+    color: var(--primary-N);
+    border-color: #BDC9D1 #BDC9D1 var(--primary-N) #BDC9D1;
 }
 
 .dropdown {
@@ -97,7 +103,7 @@ nav>nav-item:hover, nav>nav-item.nav-active{
     text-decoration: none;
     font-size: 0.75rem;
 
-    background-color: #0F69B4;
+    background-color: var(--primary-N);
 }
 
 .dropdown-content a:hover {
@@ -109,8 +115,7 @@ nav>nav-item:hover, nav>nav-item.nav-active{
     left: 15%;
     margin: 0;
 }
-
-/*#endregion */
+/*#endregion*/
 
 /*#region FOOTER*/
 footer{
@@ -121,7 +126,7 @@ footer{
 
 }
 .footer-line-chile{
-    background: linear-gradient(90deg, #0F69B4 40%, #EB3646 40%);
+    background: linear-gradient(90deg, var(--primary-N) 40%, #EB3646 40%);
     border: 0;
 }
 
@@ -138,7 +143,7 @@ footer{
 }
 
 .lista>h4{
-    color: #0F69B4;
+    color: var(--primary-N);
     font-family: 'Ubuntu';
     font-weight: normal;
 }
@@ -158,7 +163,7 @@ footer{
 }
 
 .footer-chile{
-    background: linear-gradient(90deg, #0F69B4 42%, #EB3646 42%);
+    background: linear-gradient(90deg, var(--primary-N) 42%, #EB3646 42%);
     border: 0;
     margin: 1.5rem 0 0 1rem;
     padding: 0.5rem 3.3rem 0 0;
@@ -166,7 +171,407 @@ footer{
 
 /*#endregion*/
 
-
 .main-content{
     min-height: calc(100vh - 239px);
+}
+
+/*#endregion LAYOUT*/
+
+/* #region LOGIN */
+.frame-login{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    align-content: center;
+
+    width: 60%;
+    margin: 3rem auto 3rem auto;
+    
+    background: #FFFFFF;
+    border-radius: 5px;
+}
+.login-side{
+    width: 50%;
+}
+
+.login-side.left{
+    margin: 0 0 0 5%;
+}
+
+.login-side.left>p{
+    font-weight: 500;
+    font-size: 1.2rem;
+}
+
+.container-text{
+    margin-top: calc(42% - 0.8rem);
+}
+
+.chile-block{
+    width: 30%;
+    height: 0.8rem;
+    background: linear-gradient(90deg, var(--primary-N) 40.86%, #EB3646 40.86%);
+}
+
+.login-side.right{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    margin: 2% 0 2% 0;
+    padding: 9% 2.5% 9% 2.5%;
+    border-left: 1px solid #D7D7D7;
+    
+}
+
+.login-side.right h3{
+    margin: 0 0 15% 0;
+}
+
+.login-input{
+    width: 75%;
+
+    padding: 0.5rem 0 0.5rem 0;
+    margin: 0 0 1rem 0;
+    text-indent: 7%;
+
+    border-radius: 5px;
+    background: #FFFFFF;
+    border: 1px solid #C2C2C2;
+}
+
+.login-input:focus{
+    border-color: #8f8f8f;
+}
+
+.login-forgot{
+    text-decoration: none;
+    color: var(--primary-N);
+    background: local;
+    border: 0;
+    width: 50%;
+    margin: 0.5rem 25% 0 25%;
+}
+
+.login-forgot:hover{
+    color: var(--primary-D);
+}
+
+.login-ingresar{
+    color: white;
+    margin-top: 3rem;
+
+    border: 0;
+    width: 50%;
+    height: 2rem;
+
+    border-radius: 5px;
+    background: var(--primary-N);
+    cursor: pointer;
+
+}
+.login-ingresar:hover{
+    background: var(--primary-D);
+}
+
+/*#endregion*/
+
+
+/* ---------------------------------------------------------------------------- */
+
+/* #region TEXT ALIGN */
+.text-center{
+    text-align: center !important;
+}
+.text-start{
+    text-align: start !important;
+}
+.text-end{
+    text-align: end !important;
+}
+.text-justify{
+    text-align: justify !important;
+}
+/*#endregion*/
+
+/* #region WIDTH */
+.w-10{
+    width: 10%;
+}
+.w-20{
+    width: 20%;
+}
+.w-30{
+    width: 30%;
+}
+.w-40{
+    width: 40%;
+}
+.w-50{
+    width: 50%;
+}
+.w-60{
+    width: 60%;
+}
+.w-70{
+    width: 70%;
+}
+.w-80{
+    width: 80%;
+}
+.w-90{
+    width: 90%;
+}
+.w-100{
+    width: 100%;
+}
+/*#endregion*/
+
+/* #region HEIGHT */
+.h-10{
+    height: 10%;
+}
+.h-20{
+    height: 20%;
+}
+.h-30{
+    height: 30%;
+}
+.h-40{
+    height: 40%;
+}
+.h-50{
+    height: 50%;
+}
+.h-60{
+    height: 60%;
+}
+.h-70{
+    height: 70%;
+}
+.h-80{
+    height: 80%;
+}
+.h-90{
+    height: 90%;
+}
+.h-100{
+    height: 100%;
+}
+/* #endregion */
+
+/* #region MARGINS */
+.m-auto{
+    margin: auto !important;
+}
+.m-t-auto{
+    margin-top: auto !important;
+}
+.m-l-auto{
+    margin-left: auto !important;
+}
+.m-b-auto{
+    margin-bottom: auto !important;
+}
+.m-r-auto{
+    margin-right: auto !important;
+}
+.m-x-auto{
+    margin-left: auto !important;
+    margin-right: auto !important;
+}
+.m-y-auto{
+    margin-top: auto !important;
+    margin-bottom: auto !important;
+}
+
+.m-0{
+    margin: 0 !important;
+}
+.m-t-0{
+    margin-top: 0 !important;
+}
+.m-l-0{
+    margin-left: 0 !important;
+}
+.m-b-0{
+    margin-bottom: 0 !important;
+}
+.m-r-0{
+    margin-right: 0 !important;
+}
+.m-x-0{
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+}
+.m-y-0{
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
+}
+
+.m-1{
+    margin: 1rem !important;
+}
+.m-t-1{
+    margin-top: 1rem !important;
+}
+.m-l-1{
+    margin-left: 1rem !important;
+}
+.m-b-1{
+    margin-bottom: 1rem !important;
+}
+.m-r-1{
+    margin-right: 1rem !important;
+}
+.m-x-1{
+    margin-left: 1rem !important;
+    margin-right: 1rem !important;
+}
+.m-y-1{
+    margin-top: 1rem !important;
+    margin-bottom: 1rem !important;
+}
+/*#endregion*/
+
+/* #region PADDING */
+.p-1{
+    padding: 1rem;
+}
+.p-t-1{
+    padding-top: 1rem;
+}
+.p-b-1{
+    padding-bottom: 1rem;
+}
+.p-l-1{
+    padding-left: 1rem;
+}
+.p-r-1{
+    padding-right: 1rem;
+}
+.p-x-1{
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+.p-y-1{
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+}
+
+.p-2{
+    padding: 2rem;
+}
+.p-t-2{
+    padding-top: 2rem;
+}
+.p-b-2{
+    padding-bottom: 2rem;
+}
+.p-l-2{
+    padding-left: 2rem;
+}
+.p-r-2{
+    padding-right: 2rem;
+}
+.p-x-2{
+    padding-left: 2rem;
+    padding-right: 2rem;
+}
+.p-y-2{
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+}
+/* #endregion */
+
+/*#region INPUTS */
+
+input.input-text{
+    padding: 0.5rem 0 0.5rem 0;
+    margin: 0 0 1rem 0;
+    text-indent: 4%;
+
+    font-size: medium;
+
+    border-radius: 5px;
+    background: #FFFFFF;
+    border: 1px solid #C2C2C2;
+}
+textarea{
+    padding: 0.5rem;
+    margin: 0 0 1rem 0;
+
+    font-size: medium;
+
+    border-radius: 5px;
+    background: #FFFFFF;
+    border: 1px solid #C2C2C2;
+}
+
+select.input-select{
+    padding: 0.4rem;
+
+    font-size: medium;
+
+    border-color: #C2C2C2;
+    border-radius: 0.3rem;
+    cursor: pointer;
+}
+select.input-select:hover{
+    background-color: var(--primary-N);
+    color: #ffffff;
+}
+
+button.input-button[type=button], button.input-button[type=submit]{
+    padding: 0.5rem 3rem 0.5rem 3rem;
+
+    color: white;
+    background-color: var(--primary-N);
+    
+    border: 0;
+    border-radius: 0.3rem;
+}
+button.input-button[type=button]:hover, button.input-button[type=submit]:hover{
+    background-color: var(--primary-D);
+    cursor: pointers;
+}
+
+input.input-checkbox{
+    appearance: none;
+
+    cursor: pointer;
+    background-color: #fff;
+    
+    width: 1.25rem;
+    min-width: 1.25rem;
+    max-width: 1.25rem;
+    
+    height: 1.25rem;
+    min-height: 1.25rem;
+    max-height: 1.25rem;
+
+    border: 1px solid #888;
+    border-radius: 0.25rem;
+}
+input.input-checkbox:hover{
+    background-color: var(--primary-N);
+}
+input.input-checkbox:checked{
+    background-color: var(--primary-N);
+    background-image: url("/static/img/icons/checked.svg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 2.5rem;
+}
+
+/*#endregion*/
+
+/* COLORS */
+
+:root {
+    --primary-XL: #c6e5ff;
+    --primary-L: #87b4d9;
+    --primary-N: #0F69B4;
+    --primary-D: #0a4b81;
+    --primary-XD: #07345a;
 }
